# boids

./: .gitignore  CMakeLists.txt  README.md  boid.cpp  boid.hpp  boidTest.cpp  constants.hpp  control.cpp  control.hpp  egui.cpp  egui.hpp  flock.cpp  flock.hpp  graphics.cpp  graphics.hpp  main.cpp  maintest.cpp  random.cpp  random.hpp  statistics.cpp  statistics.hpp  structs.hpp  switchbutton.cpp  switchbutton.hpp  todo.txt
docs/: boidsreport.tex
include/: boid.hpp  constants.hpp  egui.hpp  flock.hpp  graphics.hpp  gui.hpp  random.hpp  statistics.hpp  structs.hpp  switchbutton.hpp
source/: boid.cpp  egui.cpp  flock.cpp  graphics.cpp  gui.cpp  main.cpp  random.cpp  statistics.cpp  switchbutton.cpp
testing/: CMakeLists.txt  testBoid  testBoid.cpp  testFlock.cpp  testRandom.cpp  testboid.cpp  testflock.cpp  testing  testingBoid  testingBoid.cpp  testingStatistics.cpp  testrandom.cpp  teststatistics.cpp
